monitoring/monitoring-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: monitoring
  name: monitoring
